--- a/privacidad.html
+++ b/privacidad.html
@@ -1,6 +1,6 @@
 <h1>Aviso de privacidad</h1>
-<p> Xokall S.A. De C.V. es el responsable del tratamiento de los datos personales que nos proporcione.</p>
+<p> XOKALL S.A. DE C.V. es el responsable del tratamiento de los datos personales que nos proporcione.</p>
 <p> Los datos personales recabados serán utilizados para las siguientes finalidades: Confirmar las condiciones como horarios, domicilio, entre otros del servicio spa que se otorgará en el domicilio. </p>
-<p> En caso de que no desee que sus datos personales sean tratados para las finalidades  adicionales, usted puede manifestarlo mediante el correo de xokall.bite@gmail.com o al teléfono 55 4540 7221</p>
-<p> Le informamos que sus datos personales son compartidos con el representante comericial de Xokall S.A. De C.V. con el único propósito de confirmar las condiciones de sus servicios</p>
-<p> En caso de que no desee que sus datos personales sean transferidos a los destinatarios antes señalados, usted puede manifestarlo mediante el correo de xokall.bite@gmail.com o al teléfono 55 4540 7221</p>
+<p> En caso de que no desee que sus datos personales sean tratados para las finalidades  adicionales, usted puede manifestarlo mediante el correo de xokall.bite@gmail.com o al teléfono 55 4540 7221.</p>
+<p> Le informamos que sus datos personales son compartidos con el representante comercial de XOKALL S.A. DE C.V. con el único propósito de confirmar las condiciones de su servicio por recibir al domicilio solicitado.</p>
+<p> En caso de que no desee que sus datos personales sean transferidos a los destinatarios antes señalados, usted puede manifestarlo mediante el correo de xokall.bite@gmail.com o al teléfono 55 4540 7221.</p>
